src/test/deca/codegen/invalid/division_entier_0.deca
// // Description:
// //    Utilisation simple de la classe Math
// //
// // Resultats:
// //    Error: Division by zero
// //
// // Historique:
// //    cree le 15/01/2024
{
    int x = 2/0;
}